cleanup of endpoints, controllers are 1:1 to swagger
