# src/main/java/cz/cvut/fel/vyzkumodolnosti/controllers/DeviceController.java
@@ -9,7 +9,6 @@ import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
 import java.util.List;
-import java.util.Set;
 
 @Slf4j
 @RestController
@@ -22,21 +21,9 @@ public class DeviceController {
         this.service = service;
     }
 
-    @GetMapping(value = "/connect")
-    @PreAuthorize("hasRole('ROLE_ADMIN')")
-    public void connectDevicesToUserId() {
-        service.connectExistingDevicesToUserIds();
+    @PreAuthorize("hasAnyRole('ROLE_ADMIN', 'ROLE_READER')")
+    @GetMapping(value = "/active-research-numbers")
+    public List<String> findAllActiveResearchNumbers() {
+        return service.findAllActiveResearchNumbers();
     }
-
-	@GetMapping(value = "/research-numbers")
-	@PreAuthorize("hasRole('ROLE_ADMIN, ROLE_READER')")
-	public Set<String> findAllResearchNumbers() {
-		return service.findAllResearchNumbers();
-	}
-
-	@PreAuthorize("hasAnyRole('ROLE_ADMIN', 'ROLE_READER')")
-	@GetMapping(value = "/active-research-numbers")
-	public List<String> findAllActiveResearchNumbers() {
-		return service.findAllActiveResearchNumbers();
-	}
 }
